# pipeline_notification_sender_mvp

./: .gitignore  README.md  pyproject.toml
samples/: notification_report.json
src/pipeline_notification_sender/: cli.py  contract.py  models.py  report.py  sender.py
src/pipeline_notification_sender.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_contract.py  test_report.py  test_send_flow.py  test_sender.py
